plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

shadowJar {
    archiveBaseName = 'TCD1304-Spectrometer'
    archiveVersion = '1.0.0'
    archiveClassifier = 'full'
    manifest {
        attributes 'Main-Class': 'by.spectrometer.MainApp'
    }
    mergeServiceFiles()
}

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

application {
    mainClass = 'by.spectrometer.MainApp'
    applicationName = 'TCD1304 Spectrometer'
}

dependencies {
    implementation "org.openjfx:javafx-controls:21"
    implementation "org.openjfx:javafx-fxml:21"
    implementation "org.openjfx:javafx-web:21"

    implementation 'com.fazecast:jSerialComm:2.10.4'
    implementation 'org.rxtx:rxtx:2.1.7'
    implementation 'org.java-websocket:Java-WebSocket:1.6.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}